# tldr-email

./: Cargo.toml  README.md
src/: actions.rs  app.rs  args.rs  email.rs  main.rs  state.rs  ui.rs
