[package]
name = "tldr-email"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
email-lib = { version = "0.26.4", features = ["imap", "smtp", "autoconfig", "tokio-rustls", "derive"] }
email_address = "0.2.9"
futures = "0.3.31"
ratatui = "0.29.0"
secret-lib = "1.0.0"
throbber-widgets-tui = "0.8.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.14"
webbrowser = "1.0.4"
